Fix more SAT findings (#1318)
This fixes ~100 SAT findings. It also adds some more null annotations to the HABot classes.

Signed-off-by: Wouter Born <github@maindrain.net>